maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:32: error: illegal start of simple expression
  }
  ^