maze.island.IslandMaze.scala.code
override def run() {
  	nord();
    while(!estSurBiscuit()){
    if(estFaceMur()){
      gauche();
      if(estFaceMur()){
        droite();droite();
      } else {
        avance();
      }
    } else {
      gauche();
      if(estFaceMur()){
        droite();avance();
      } else {
        avance();gauche();
        if(!estFaceMur()){
          avance();
        } else {
          droite();
        }
      }
    }
  }
  prendBiscuit();
}

def nord (){
  getDirection() match{
    case Direction.NORTH => if(!est)
  }
}
